second page fully added

--- a/index.html
+++ b/index.html
@@ -31,16 +31,43 @@
                 <p class="sub-title">Web development empowers individuals and businesses to create dynamic, interactive, and accessible online experiences. It drives innovation and connectivity by facilitating communication, commerce, and information sharing globally. Additionally, it offers diverse career opportunities and the ability to make a tangible impact on society.</p>       
             </div>
         </div>
+        <section>
         <div class="card-container">
             <div class="card">
                 <div class="text-box">
-                    <h2 class="card-title-one">I will Do Coding and Change The World</h2>
+                    <h2 class="card-title">I will Do Coding and Change The World</h2>
                     <p class="card-description">By coding, I aim to innovate and create solutions that will positively transform and impact the world.</p>
                     <button class="btn-secondary">Learn More</button>
                 </div>
                 <div class="image-box">
-                    <img class="card-pic" src="assets/Layer_1.png" alt="Coding Image">
-                </div>
+                    <img class="card-pic" src="assets/Layer_1.png" alt="">
+                </div>      
+            </section>
+             
+            <section>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="image-box">
+                            <img class="card-pic" src="assets/Group 3.png" alt="">
+                        </div>    
+                        <div class="text-box">
+                            <h2 class="card-title">I will help People by creating Modern Web System</h2>
+                            <p class="card-description">I will help people by creating modern web systems that enhance accessibility, efficiency, and connectivity.</p>
+                            <button class="btn-secondary">Learn More</button>
+                        </div>   
+            </section>
+            <section>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="text-box">
+                            <h2 class="card-title">I will Do Coding and Change The World</h2>
+                            <p class="card-description">By coding, I aim to innovate and create solutions that will positively transform and impact the world.</p>
+                            <button class="btn-secondary">Learn More</button>
+                        </div>
+                        <div class="image-box">
+                            <img class="card-pic" src="assets/Group 4.png" alt="">
+                        </div>  
+            </section>
             </div>
         </div>
     </section>
