next target page added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <nav>
         <header class="title-bar">
-            <h2 class="name">Hura</h2>
-            <button class="btn-first">Download Resume</button>
+            <div class="name">
+                Awlad.H
+            </div>
+            <button class="btn-secondary">Download Resume</button>
         </header>
     </nav>
     <section id="hero">
@@ -71,5 +73,103 @@
             </div>
         </div>
     </section>
+
+    <section id="card-box">
+        <div class="info">
+            <div class="container">
+                <h1 class="title">My Inspiration</h1>
+                <p class="sub-title">My inspiration is fueled by a deep desire to innovate and create meaningful change through coding. I believe in leveraging technology to solve real-world problems and improve lives globally. Each line of code represents an opportunity to make a positive impact, driving me to constantly learn and grow as a developer.</p>       
+            </div>
+        </div>
+        <section>
+    <div>
+    <section class="hero-video">
+        <iframe width="1100" height="450" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=_FftaGBjmbcElHC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </section>
+</div>
+     
+    <section id="card-box">
+        <div class="info">
+            <div class="container">
+                <h1 class="title">My Current Target</h1>
+                <p class="sub-title">My current target is to master coding skills and apply them to create innovative solutions for real-world challenges. By continuously learning and improving, I aim to make a significant impact in the tech industry.</p>       
+            </div>
+        </div>
+        <section>
+  
+
+        <div class="skills-container"> 
+           <div class="skill">
+            <div class="first-skill-box">
+            <img src="assets/html.png" alt="">
+            <h2 class="skill-title">HTML</h2>
+            <p class="skill-description">Hyper Text Markup Language</p>
+            <ul>
+                <li><a href="">Learn More</a></li>
+            </ul>
+        </div>
+    </div>
+
+        <div class="skill">
+            <div class="second-skill-box">
+            <img src="assets/css.png" alt="">
+            <h2 class="skill-title">CSS</h2>
+            <p class="skill-description">Cascading Style Sheets</p>
+            <ul>
+                <li><a href="">Learn More</a></li>
+            </ul>
+        </div>
+    </div>
+
+        <div class="skill">
+            <div class="third-skill-box">
+            <img src="assets/js.png" alt="">
+            <h2 class="skill-title">JavaScript</h2>
+            <p class="skill-description">It is a versatile programming language </p>
+            <ul>
+                <li class="learn"><a href="">Learn More</a></li>
+            </ul>
+        </div>
+    </div>
+    </div>
+</section>
+
+  
+<section id="card-box">
+    <div class="info">
+        <div class="container">
+            <h1 class="title">My Next Target</h1>
+            <p class="sub-title">My next target is to collaborate on impactful tech projects, contributing to open-source communities and gaining experience through real-world applications.</p>       
+        </div>
+    </div>
+    <section>
+
+ <section>
+   <div class="language-box">
+    <img  class="initial-pic" src="assets/react.png" alt="">
+    <h1  class="language-header">ReactJS</h1>
+    <p class="language-descriptio>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <a href="">Learn more</a>
+   </div>
+ </section>
+
+<section>
+    <div class="language-box">
+    <img  class="first-pic"  src="assets/nodejs.png" alt="">
+    <h1  class="language-header">NodeJs</h1>
+    <p class="language-descriptio>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <a href="">Learn More</a>
+   </div>
+</section>
+
+<section>
+    <div class="language-box">
+    <img class="second-pic" src="assets/mongodb.png" alt="">
+    <h1 class="language-header">MongoDB</h1>
+    <p class="language-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+    <a href="">Learn More</a>
+   </div>
+</section>
+
 </body>
 </html>
