added last nav bar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <header class="title-bar">
-            <div class="name">
-                Awlad.H
-            </div>
+            <ul>
+                <li><a href="">Hura.J</a></li>
+            </ul>
             <button class="btn-secondary">Download Resume</button>
         </header>
     </nav>
@@ -26,6 +26,7 @@
         </div>
     </section>
 
+    <main>
     <section id="card-box">
         <div class="info">
             <div class="container">
@@ -88,88 +89,40 @@
     </section>
 </div>
      
-    <section id="card-box">
-        <div class="info">
-            <div class="container">
+    <section id="skill-box">
+        <div class="container">
+            <div class="skill-info">
                 <h1 class="title">My Current Target</h1>
                 <p class="sub-title">My current target is to master coding skills and apply them to create innovative solutions for real-world challenges. By continuously learning and improving, I aim to make a significant impact in the tech industry.</p>       
             </div>
         </div>
-        <section>
-  
-
-        <div class="skills-container"> 
-           <div class="skill">
-            <div class="first-skill-box">
-            <img src="assets/html.png" alt="">
-            <h2 class="skill-title">HTML</h2>
-            <p class="skill-description">Hyper Text Markup Language</p>
-            <ul>
-                <li><a href="">Learn More</a></li>
-            </ul>
-        </div>
-    </div>
-
-        <div class="skill">
-            <div class="second-skill-box">
-            <img src="assets/css.png" alt="">
-            <h2 class="skill-title">CSS</h2>
-            <p class="skill-description">Cascading Style Sheets</p>
-            <ul>
-                <li><a href="">Learn More</a></li>
-            </ul>
-        </div>
-    </div>
-
-        <div class="skill">
-            <div class="third-skill-box">
-            <img src="assets/js.png" alt="">
-            <h2 class="skill-title">JavaScript</h2>
-            <p class="skill-description">It is a versatile programming language </p>
-            <ul>
-                <li class="learn"><a href="">Learn More</a></li>
-            </ul>
-        </div>
-    </div>
-    </div>
-</section>
-
-  
-<section id="card-box">
-    <div class="info">
-        <div class="container">
-            <h1 class="title">My Next Target</h1>
-            <p class="sub-title">My next target is to collaborate on impactful tech projects, contributing to open-source communities and gaining experience through real-world applications.</p>       
-        </div>
-    </div>
-    <section>
-
- <section>
-   <div class="language-box">
-    <img  class="initial-pic" src="assets/react.png" alt="">
-    <h1  class="language-header">ReactJS</h1>
-    <p class="language-descriptio>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-    <a href="">Learn more</a>
-   </div>
  </section>
+</main>
 
-<section>
-    <div class="language-box">
-    <img  class="first-pic"  src="assets/nodejs.png" alt="">
-    <h1  class="language-header">NodeJs</h1>
-    <p class="language-descriptio>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-    <a href="">Learn More</a>
-   </div>
+<footer>
+<section id="hero-banner">
+    <div class="banner-content">
+        <h1 class="title">I need Support</h1>
+        <p class="sub-title">Support involves providing help, guidance, or assistance in various areas such as technical issues, emotional well-being, customer inquiries, academic challenges, or physical tasks.</p>  
+    <form action="">
+        <div class="text-field">
+        <textarea name=""  cols="20" rows="5" placeholder="Suggest me any feedback for me"></textarea>
+          <input type="text" type="submit" placeholder="Submit">
+          </div>
+    </form>
+    </div>
 </section>
+<div class="footer-name">
+    <div class="footer-content">
+        <p>An Open Commitment by Awlad Hossain</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="Facebook"></a>
+            <a href="https://github.com" target="_blank"><img src="assets/github.png" alt="GitHub"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img src="assets/linkedin-icon 1.png" alt="LinkedIn"></a>
+        </div>
+    </div>
+</footer> 
 
-<section>
-    <div class="language-box">
-    <img class="second-pic" src="assets/mongodb.png" alt="">
-    <h1 class="language-header">MongoDB</h1>
-    <p class="language-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-    <a href="">Learn More</a>
-   </div>
-</section>
 
 </body>
 </html>
