added all pages

--- a/index.html
+++ b/index.html
@@ -85,41 +85,77 @@
         <section>
     <div>
     <section class="hero-video">
-        <iframe width="1100" height="450" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=_FftaGBjmbcElHC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe class="video-name" width="1100" height="450" src="https://www.youtube.com/embed/Cxf5sOXG0w0?si=_FftaGBjmbcElHC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 </div>
      
-    <section id="skill-box">
+  <section id="skill-box">
         <div class="container">
             <div class="skill-info">
                 <h1 class="title">My Current Target</h1>
                 <p class="sub-title">My current target is to master coding skills and apply them to create innovative solutions for real-world challenges. By continuously learning and improving, I aim to make a significant impact in the tech industry.</p>       
             </div>
         </div>
- </section>
+ </section >
+ 
+ <section id="skills">
+    <div class="skills-container"> 
+        <div class="skill">
+            <div class="first-skill-box">
+                <img src="assets/html.png" alt="">
+                <h2 class="skill-title">HTML</h2>
+                <p class="skill-description">Hyper Text Markup Language</p>
+                <a class="learn" href="">Learn More</a>
+            </div>
+        </div>
+
+        <div class="skill">
+            <div class="second-skill-box">
+                <img src="assets/css.png" alt="">
+                <h2 class="skill-title">CSS</h2>
+                <p class="skill-description">Cascading Style Sheets</p>
+                <a class="learn" href="">Learn More</a>
+            </div>
+        </div>
+
+        <div class="skill">
+            <div class="third-skill-box">
+                <img src="assets/js.png" alt="">
+                <h2 class="skill-title">JavaScript</h2>
+                <p class="skill-description">It is a versatile programming language</p>
+                <a class="learn" href="">Learn More</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 </main>
 
 <footer>
-<section id="hero-banner">
-    <div class="banner-content">
-        <h1 class="title">I need Support</h1>
-        <p class="sub-title">Support involves providing help, guidance, or assistance in various areas such as technical issues, emotional well-being, customer inquiries, academic challenges, or physical tasks.</p>  
-    <form action="">
-        <div class="text-field">
-        <textarea name=""  cols="20" rows="5" placeholder="Suggest me any feedback for me"></textarea>
-          <input type="text" type="submit" placeholder="Submit">
-          </div>
-    </form>
-    </div>
-</section>
+    <section id="hero-banner">
+        <div class="banner-class">
+            <h2 class="title">I need Support</h2>
+            <p class="sub-title">To give help, assist someone, give aid or defend another in need. This could be financially, physically, socially, moral or spiritual in nature.</p>
+            <form action="">
+                <input class="text-bar" type="text" placeholder="Suggest me any feedback for me" required>
+                <button  class="btn-third" type="submit">Submit</button>
+            </form>
+        </div>
+    </section>
+
+   
 <div class="footer-name">
     <div class="footer-content">
         <p>An Open Commitment by Awlad Hossain</p>
+        <nav>
         <div class="social-icons">
             <a href="https://www.facebook.com" target="_blank"><img src="assets/facebook.png" alt="Facebook"></a>
             <a href="https://github.com" target="_blank"><img src="assets/github.png" alt="GitHub"></a>
             <a href="https://www.linkedin.com" target="_blank"><img src="assets/linkedin-icon 1.png" alt="LinkedIn"></a>
         </div>
+    </nav>
     </div>
 </footer> 
 
